syntax = "proto3";

package grpc.proto;

service UserService {
  rpc SaveUser(SaveUserRequest) returns (SaveUserResponse);
  rpc GetUser(GetUserRequest) returns (User);
}

message SaveUserRequest {
  string email = 1;
}

message SaveUserResponse {
  string id = 1;
}

message GetUserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string email = 2;
}
